<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cookbook.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_recipes"
        android:name="com.example.cookbook.ui.recipes.RecipesFragment"
        android:label="@string/menu_recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.cookbook.ui.favourite.FavouriteFragment"
        android:label="@string/menu_favourite"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/nav_myRecipes"
        android:name="com.example.cookbook.ui.myRecipes.MyRecipesFragment"
        android:label="@string/menu_my_recipes"
        tools:layout="@layout/fragment_my_recipes" />

    <fragment
        android:id="@+id/nav_shopping"
        android:name="com.example.cookbook.ui.shopping.ShoppingFragment"
        android:label="@string/menu_shopping"
        tools:layout="@layout/shopping_fragment"/>
</navigation>