<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recipes.RecipeInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recipe_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="20sp"
            android:textColor="#000000"
            android:paddingTop="8dp"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/recipe_info_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/description"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/recipe_info_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_margin="10dp"/>

        <ImageView
            android:id="@+id/recipe_info_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/info"
            android:src="@drawable/ic_menu_camera"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>


</FrameLayout>