<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recipes.RecipeDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItemInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItemIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredients" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItemSteps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instruction" />
        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/shoppingList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>